# chipcoin

./: .env.devnet.example  .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pq-dress-rehearsal.json  pyproject.toml  setup.py
config/: pq-rollout-hosts.example.toml  reward-observer.devnet.example.json
docker/: entrypoint.sh
docs/: bootstrap-service.md  browser-mldsa-feasibility.md  browser-wallet.md  clean-install-checklist.md  devnet-node-rewards.md  docker.md  implementation-plan.md  mainnet-readiness.md  miner.md  mining-architecture.md  monetary-policy.md  native-random-check-node-rewards.md  native-reward-distributed-devnet.md  native-reward-local-test.md  native-reward-multihost-ops.md  native-reward-prototype-phase-close.md  native-rewards-consensus-test-plan.md  node.md  p2p-runtime-memory-hardening.md  post-quantum-activation-checklist.md  post-quantum-addresses.md  post-quantum-dress-rehearsal-report.md  post-quantum-operational-readiness.md  post-quantum-specification.md  post-quantum-threat-model.md  pq-activation-readiness.md  pq-height-20000-external-services-checklist.md  pq-height-20000-rollback.md  pq-height-20000-rollout.md  pq-smoke-test.md  pq-transaction-hardening.md  protocol.md  security-hardening.md  setup-wizard.md  system-requirements.md  testnet-default-release.md  testnet-fast-join.md  testnet-launch.md  testnet-pq-activation.md  testnet.md
services/bootstrap-seed/: Dockerfile  README.md  pyproject.toml
services/bootstrap-seed/src/bootstrap_seed/: __init__.py  app.py  config.py  models.py  store.py
(+210 files in other folders)
